--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
   - docker build -t react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run react-test npm test -- --coverage
+  - docker run -e CI=true docker-react npm run test -- --coverage
 
 after_sucess:
   - docker build -t multi-client ./client
