change travis yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,16 +9,16 @@ script:
   - docker run -e CI=true react-test npm test 
 
 after_sucess:
-  - docker build -t multi-client ./client
-  - docker build -t multi-nginx ./nginx
-  - docker build -t multi-server ./server
-  - docker build -t multi-worker ./worker
+  - docker build -t  199012118961/multi-client ./client
+  - docker build -t  199012118961/multi-nginx ./nginx
+  - docker build -t  199012118961/multi-server ./server
+  - docker build -t  199012118961/multi-worker ./worker
 
 # docker login
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
 # push images to the dockerhub
-  - docker push multi-client
-  - docker push multi-nginx
-  - docker push multi-server
-  - docker push multi-worker
+  - docker push  199012118961/multi-client
+  - docker push  199012118961/multi-nginx
+  - docker push  199012118961/multi-server
+  - docker push  199012118961/multi-worker
 
